[gd_scene load_steps=20 format=2]

[ext_resource path="res://Sprites/Enemies/SlimeBoss.png" type="Texture" id=1]
[ext_resource path="res://Scripts/KingSlime.gd" type="Script" id=2]
[ext_resource path="res://Sounds/SlimeDamage.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/SlimeDeath.wav" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 11520, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 11840, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 12160, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 12480, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 12800, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 13120, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 10240, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 10560, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 10880, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1280, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1600, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1920, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1280, 0, 320, 320 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": false,
"name": "dead",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": false,
"name": "hurt",
"speed": 4.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "walk",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 87.4519, 78.9304 )

[node name="KingSlime" type="KinematicBody2D"]
position = Vector2( -0.012146, -0.49337 )
collision_layer = 16
collision_mask = 3
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.840881, -119.828 )
frames = SubResource( 14 )
animation = "hurt"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -11.1351, -37.5232 )
shape = SubResource( 15 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -11.689, -6.63797 )
enabled = true

[node name="Timer" type="Timer" parent="."]

[node name="DamagedAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="DeathAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="TimerJumpRayCheck" type="Timer" parent="."]
one_shot = true

[node name="EnemyPosition" type="Position2D" parent="."]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
